fix: security and formatting issues - add rel noopener and improve markdown

--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
                             <td>Complete guide for implementing keyboard shortcuts in Waze Map Editor SDK with working demo</td>
                             <td><span class="status-badge status-active">Active</span></td>
                             <td>
-                                <a href="https://github.com/kid4rm90s/WMESDK-KEYBOARD-SHORTCUT-IMPLEMENTATION-GUIDE" class="link-btn" target="_blank">GitHub</a>
-                                <a href="https://github.com/kid4rm90s/WMESDK-KEYBOARD-SHORTCUT-IMPLEMENTATION-GUIDE/blob/master/README.md" class="link-btn link-btn-secondary" target="_blank">Docs</a>
+                                <a href="https://github.com/kid4rm90s/WMESDK-KEYBOARD-SHORTCUT-IMPLEMENTATION-GUIDE" class="link-btn" target="_blank" rel="noopener">GitHub</a>
+                                <a href="https://github.com/kid4rm90s/WMESDK-KEYBOARD-SHORTCUT-IMPLEMENTATION-GUIDE/blob/master/README.md" class="link-btn link-btn-secondary" target="_blank" rel="noopener">Docs</a>
                             </td>
                         </tr>
                     </tbody>
@@ -358,9 +358,9 @@
                     <div style="background: #e7f3ff; border-left: 4px solid #667eea; padding: 15px; margin-top: 20px; border-radius: 4px;">
                         <strong>🔗 Quick Links:</strong>
                         <ul style="margin-left: 20px; margin-top: 10px;">
-                            <li><a href="https://github.com/kid4rm90s?tab=repositories&q=github-pages" style="color: #667eea; text-decoration: none; font-weight: 500;" target="_blank">View all your GitHub Pages projects →</a></li>
-                            <li><a href="https://github.com/kid4rm90s?tab=repositories" style="color: #667eea; text-decoration: none; font-weight: 500;" target="_blank">View all your repositories →</a></li>
-                            <li><a href="https://github.com/kid4rm90s" style="color: #667eea; text-decoration: none; font-weight: 500;" target="_blank">Visit your GitHub profile →</a></li>
+                            <li><a href="https://github.com/kid4rm90s?tab=repositories&q=github-pages" style="color: #667eea; text-decoration: none; font-weight: 500;" target="_blank" rel="noopener">View all your GitHub Pages projects →</a></li>
+                            <li><a href="https://github.com/kid4rm90s?tab=repositories" style="color: #667eea; text-decoration: none; font-weight: 500;" target="_blank" rel="noopener">View all your repositories →</a></li>
+                            <li><a href="https://github.com/kid4rm90s" style="color: #667eea; text-decoration: none; font-weight: 500;" target="_blank" rel="noopener">Visit your GitHub profile →</a></li>
                         </ul>
                     </div>
                 </div>
@@ -381,7 +381,7 @@
     </main>
         
         <footer>
-            <p>&copy; 2026 kid4rm90s | GitHub Pages Portfolio | <a href="https://github.com/kid4rm90s" style="color: #667eea; text-decoration: none;" target="_blank">Visit GitHub Profile</a></p>
+            <p>&copy; 2026 kid4rm90s | GitHub Pages Portfolio | <a href="https://github.com/kid4rm90s" style="color: #667eea; text-decoration: none;" target="_blank" rel="noopener">Visit GitHub Profile</a></p>
         </footer>
     </div>
 </body>
