--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
                     </tbody>
                 </table>
                 
-                <div class="info-box" style="background: #fff3cd; border-left-color: #ffc107; margin-top: 30px;">
+                <!-- <div class="info-box" style="background: #fff3cd; border-left-color: #ffc107; margin-top: 30px;">
                     <strong>💡 To Add New Repositories:</strong>
                     <p style="margin-top: 10px;">Edit this HTML file and add new rows to the table above. Use the same format as the example row. Include repo name, description, status badge, and links.</p>
-                </div>
+                </div> -->
             </div>
             
             <div class="section">
